Styles and markup

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body class="story-<%= current_author %>">
-
-<%= yield %>
-
+  <div class="page">
+    <%= yield %>
+  </div>
 </body>
 </html>
