--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,9 +1,9 @@
-<h1>Some poginant literature</h1>
+<div class='home-text'>
+  <p>Some poginant literature created with <%= link_to 'Markov chains', 'http://en.wikipedia.org/wiki/Markov_chain' %> – just one of the many weird things you can do when you know how to program computers...</p>
 
-<p>Created with <%= link_to 'Markov chains', 'http://en.wikipedia.org/wiki/Markov_chain' %> – just one of the many weird things you can do when you know how to program computers...</p>
-
-<ul class='author-list'>
-  <% @authors.each do |key, name| %>
-    <li><%= link_to name, story_path(id: key) %></li>
-  <% end %>
-</ul>
+  <ul class='author-list'>
+    <% @authors.each do |key, name| %>
+      <li><%= link_to name, story_path(id: key) %></li>
+    <% end %>
+  </ul>
+</div>
